resolves #1118 - Upgrade Angular version to 11

--- a/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.html
+++ b/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.html
@@ -1,5 +1,5 @@
-<button outline nbButton status="{{disabledOrModified() ? 'disabled' : 'primary'}}" size="small"
-        disabled="disabledOrModified()" title="From {{ range.start }} to {{ range.end }}"
+<button outline nbButton [status]="disabledOrModified() ? 'disabled' : 'primary'" size="small"
+        [disabled]="disabledOrModified()" title="From {{ range.start }} to {{ range.end }}"
         [nbPopover]="templateRef" nbPopoverPlacement="bottom" nbPopoverTrigger="click">
   {{ range.start | date }} - {{ range.end | date }}
 </button>
