--- a/nlp/admin/web/src/app/search/filter/search-filter.component.html
+++ b/nlp/admin/web/src/app/search/filter/search-filter.component.html
@@ -14,18 +14,19 @@
   ~ limitations under the License.
   -->
 
-<nb-form-field>
+<nb-form-field style="display: inline-flex;">
   <nb-icon nbPrefix icon="search" pack="eva"></nb-icon>
-  <input nbInput shape="round" type="text" status="primary"
-    [ngModel]="selectedValue"
+  <input #autoBlur nbInput shape="round" type="text" status="primary" size="small"
+    [(ngModel)]="selectedValue"
     (ngModelChange)="onModelChange($event)"
     [placeholder]="name"
     [nbAutocomplete]="auto"
+    (blur)="onBlur()"
   />
 </nb-form-field>
 
-<nb-autocomplete #auto [handleDisplayFn]="displayOption" (selectedChange)="onSelectedChange($event)">
-  <nb-option [value]="noFilter">{{noFilter.label}}</nb-option>
+<nb-autocomplete #auto [handleDisplayFn]="displayOption" (selectedChange)="onSelectedChange($event)" size="small">
+  <nb-option *ngIf="noFilter" [value]="noFilter">{{noFilter.label}}</nb-option>
   <nb-option-group *ngFor="let group of filteredGroups$ | async; trackBy: trackByFn" [title]="group.name">
     <nb-option *ngFor="let option of group.children" [value]="option">
       {{ option.label }}
