--- a/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
@@ -92,7 +92,7 @@
     <div>
       <button nbButton ghost (click)="addEntity()">
         <mat-icon>add</mat-icon>
-        Add New Entity
+        Choose or Add an Entity
       </button>
       <button nbButton ghost (click)="onClose()">
         <mat-icon>close</mat-icon>
