resolves #1193 [Tock studio] add external url option in media card
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/story/media/media-dialog.component.css
+++ b/bot/admin/web/src/app/bot/story/media/media-dialog.component.css
@@ -70,3 +70,11 @@
   margin-left: 10px;
   font-size: x-small;
 }
+
+.inline-radio {
+  display: inline!important;
+}
+
+.file-block {
+  display: block;
+}
