--- a/bot/admin/web/src/app/bot/story/media/media-dialog.component.html
+++ b/bot/admin/web/src/app/bot/story/media/media-dialog.component.html
@@ -17,8 +17,8 @@
 <h1 mat-dialog-title>
   Media Card
   <nb-toggle [(checked)]="media.fillCarousel"
-             nbTooltip="If selected, if there is more than one card in the answer and if connector supports carousel, cards will be replaced by a carousel">
-    Fill Carousel
+             nbTooltip="If selected, if there are consecutive cards in the answer and if current connector supports carousel, then consecutive cards will be replaced by a carousel">
+    Carousel auto
   </nb-toggle>
 </h1>
 <span class="subTitle">
