--- a/bot/admin/web/src/app/analytics/chart-dialog/chart-dialog.component.html
+++ b/bot/admin/web/src/app/analytics/chart-dialog/chart-dialog.component.html
@@ -17,7 +17,8 @@
 <nb-card style="width: 80rem;">
 
     <tock-chart [data]="data" [title]="title" [chartPreferences]="userPreferences" [type]="type"
-                [isLoading]="false" [isFullScreen]="true" [isMultiChart]="isMultiChart"></tock-chart>
+                [isLoading]="false" [isFullScreen]="true" [isMultiChart]="isMultiChart"
+                [seriesSelectionList]="seriesSelectionList"></tock-chart>
   <nb-card-footer>
     <button nbButton status="info" (click)="dialogRef.close()" nbTooltip="Close" style="float: right;" >
       Close
