--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -4,6 +4,9 @@ layout: default
 <div class="md-content"> 
     <article class="md-content__inner md-typeset">
     {{ content }}
+        <hr/>
+        <span id='last-modified'></span>
+    {% include last_edited.html %}
     {% include toc.html %}
     {% include editable.html %}
     </article>
