Implement code tabs

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -50,5 +50,6 @@
     $$tock_search_index = "search_index_{{ page.language }}.json"
 </script>
 <script src="{{ site.baseurl }}/assets/js/application.js"></script>
+<script src="{{ site.baseurl }}/assets/js/superfences.js"></script>
 {% assign slashes = page.url | split: "/" %}
 <script>app.initialize({version:"0.17.4", url:{base:'{{ site.baseurl }}'}})</script>
