--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -27,6 +27,7 @@
   <meta name="lang:search.result.other" content="# matching documents">
   <meta name="lang:search.tokenizer" content="[\s\-]+">  
   <script src="{{ site.baseurl }}/assets/js/modernizr.74668098.js"></script>
-  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.png">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/palette.css">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.png"/>
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css"/>
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/palette.css"/>
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/superfences.css"/>
