Take SASS from Mkdocs-Material

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -8,7 +8,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   {% if site.author %}<meta name="author" content="{{ site.author }}">{% endif %}
-  <meta name="theme-color" content="{{ site.themeColor }}">    
+  <meta name="theme-color" content="{{ site.themeColor }}">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono">
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  <meta name="lang:clipboard.copy" content="Copy to clipboard">      
+  <meta name="lang:clipboard.copy" content="Copy to clipboard">
   <meta name="lang:clipboard.copied" content="Copied to clipboard">
   <meta name="lang:search.language" content="en">
   <meta name="lang:search.pipeline.stopwords" content="True">
@@ -25,9 +25,9 @@
   <meta name="lang:search.result.none" content="No matching documents">
   <meta name="lang:search.result.one" content="1 matching document">
   <meta name="lang:search.result.other" content="# matching documents">
-  <meta name="lang:search.tokenizer" content="[\s\-]+">  
+  <meta name="lang:search.tokenizer" content="[\s\-]+">
   <script src="{{ site.baseurl }}/assets/js/modernizr.74668098.js"></script>
   <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.png"/>
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css"/>
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/palette.css"/>
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/superfences.css"/>
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/overrides.css"/>
