--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,10 +2,16 @@
 <html>
   {% include head.html %}
 
-  <body dir="ltr" data-md-color-primary="{{ site.themeColor }}" data-md-color-accent="{{ site.accentColor }}">
+  <body dir="ltr" data-md-color-primary="{{ site.themeColor }}" data-md-color-accent="{{ site.accentColor }}" data-md-color-scheme="default">
+    <script>
+        switch (new URLSearchParams(window.location.search).get("scheme")) {
+            case "dark": document.querySelector("body").dataset.mdColorScheme = "dark"; break;
+            case "light": document.querySelector("body").dataset.mdColorScheme = "light"; break;
+        }
+    </script>
     {% include navigation.html %}
 
-    <div class="md-container">         
+    <div class="md-container">
         <main class="md-main">
             <div class="md-main__inner md-grid" data-md-component="container">
             {% include sidebar.html %}
